2006-10-18  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/plug-ins.c (plug_ins_init): initialize the plug-in
	translation domains before using them. Fixes bug #362983.

2006-10-14  Michael Natterer  <mitch@gimp.org>

	Merged from HEAD branch:

	* plug-ins/imagemap/imap_cmd_move.c
	* plug-ins/imagemap/imap_cmd_move_sash.c
	* plug-ins/imagemap/imap_main.c
	* plug-ins/imagemap/imap_object.c: use GDK_XOR instead of
	GDK_EQUIV. Fixes bug #311621.

2006-10-11  Raphaël Quinet  <raphael@gimp.org>

	Merged from HEAD branch:

	* app/xcf/xcf-load.c (xcf_load_tile_rle): workaround for bug
	#357809: avoid crashing when invalid offsets are read for a
	compressed tile in the XCF file.

2006-10-10  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/nova.c: added a missing cast to fix bug #340073.

2006-10-06  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* plug-ins/FractalExplorer/Dialogs.c: save files using
	g_ascii_formatd() (fixes bug #360095).

2006-09-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* plug-ins/common/ripple.c: set min for "period" scale entry
	to 1 instead of 0, and add error check for noninteractive.
	Fixes bug #357431.

2006-09-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* plug-ins/script-fu/scripts/line-nova.scm: Change min for randomness
	from 0 to 1, should fix bug #357433.

2006-09-11  Sven Neumann  <sven@gimp.org>

	Merged from HEAD branch:

	* libgimp/gimpdrawablepreview.c (gimp_drawable_preview_draw_area):
	fixed calculation of offset into the source buffer (bug #353639).

2006-09-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch:

	* plug-ins/common/depthmerge.c (dialogDepthMap2ChangedCallback):
	change "depthMap1Drawable" to "depthMap2Drawable" to fix
	typo introduced in version committed on 2004-04-21.
	Should fix bug #355219.	

2006-09-08  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	Merged from HEAD branch, with some hackery:
