@@ -1,3 +1,10 @@
+2006-11-03  Sven Neumann  <sven@gimp.org>
+
+	Merged from HEAD branch:
+
+	* plug-ins/common/screenshot.c: pass the number of bytes to
+	gimp_parasite_new(), not the number of characters.
+
 2006-10-18  Michael Natterer  <mitch@gimp.org>
 
 	* app/plug-in/plug-ins.c (plug_ins_init): initialize the plug-in
